# robotont_driver

./: .ci.rosinstall  .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
config/: plugins.yaml  robotont_params.yaml
include/robotont_driver/: driver.hpp  plugin_base_abstract.h  plugin_bat_state.hpp  plugin_debug.h  plugin_debug_out.h  plugin_led_module.hpp  plugin_odom_expected.h  plugin_power_supply.h
launch/: fake_driver_launch.py
src/: driver.cpp  fake_driver_node.cpp  plugin_bat_state.cpp  plugin_debug.cpp  plugin_debug_out.cpp  plugin_led_module.cpp  plugin_odom_expected.cpp  plugin_power_supply.cpp
src/examples/: plugin_loader.cpp  plugin_test_1.cpp  plugin_yaml_parser.cpp
